# claude-env-manager

./: .gitignore  CCDEVS.md  CLAUDE.md  CLEANING.md  GLOSARIUSZ.md  GUI_ARCHITECTURE.md  Kodeks_drogowy.md  PLAN.md  README.md  ROADMAP.md  cem_modul_konfiguracji_projektow_claude_code.code-workspace  create_shortcut.py  generate_icons.py  launcher.pyw  main.py  payload.json  requirements.txt  sh.exe.stackdump  wizard.jsx
RAZD/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLEANING.md  INSTALL.md  PLAN.md  README.md  env.example  main.py  pyproject.toml
RAZD/logs/: changelog.jsonl
RAZD/logs/snapshots/: ARCHITECTURE.md.snap  CLAUDE.md.snap  CONVENTIONS.md.snap
RAZD/razd/: __init__.py  autostart.py  shortcut.py
RAZD/razd/agent/: client.py  prompts.py  tools.py
RAZD/razd/config/: defaults.toml  settings.py
RAZD/razd/db/: repository.py  schema.sql
RAZD/razd/notion/: __init__.py  exporter.py  projects_fetcher.py  schema.py  sync_worker.py  tasks_fetcher.py
RAZD/razd/tracker/: active_window.py  activity_classifier.py  break_engine.py  browser_url.py  cc_scanner.py  distraction_detector.py  idle.py  poller.py
RAZD/razd/ui/: dialogs.py  focus_timer_tab.py  local_tab.py  main_window.py  project_picker_dialog.py  projects_tab.py  report_dialog.py  (+6 more)
RAZD/tests/: test_agent.py  test_break_engine.py  test_cc_scanner.py  test_compute_day_stats.py  test_daily_report.py  test_db.py  test_dialogs.py  test_distraction_detector.py  test_focus_timer.py  test_notion_exporter.py  test_settings.py  test_time_tracking.py  test_tracker.py  test_ui.py
RAZD/ui/: www_tab.py
(+206 files in other folders)
