[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "razd"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.7",
    "psutil>=6.0",
    "pywin32>=308",
    "uiautomation>=2.0",
    "claude-agent-sdk>=0.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
